--- a/public/theme.css
+++ b/public/theme.css
@@ -1,15 +1,23 @@
 body > section {
-  max-width: 90vw;
+  max-width: 40vw;
   margin: auto;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica", sans-serif;
   font-size: 0.9rem;
-  color: #DCCBAB;
-  background: #1D1414;
+  color: #545870;
+  background: #eaecf3;
+}
+header {
+  text-align: center;
+  margin-top: 10vh;
 }
 header img {
   width: 6rem;
+  border-radius: 1rem;
+  box-shadow: 0.2rem 0.2rem 2rem rgba(0, 0, 0, 0.3);
+  padding: 8px;
+  background: #dadce3;
 }
 @media (pointer: none), (pointer: coarse) {
   body {
