--- a/app/theme.less
+++ b/app/theme.less
@@ -33,7 +33,7 @@ header{
 }
 
 .type-xl, h2 {
-  font-size: 60px;
+  font-size: 2.8rem;
   font-weight: 600;
   line-height: 1;
   letter-spacing: -0.02em;
