--- a/public/theme.css
+++ b/public/theme.css
@@ -26,7 +26,7 @@ header img {
 }
 .type-xl,
 h2 {
-  font-size: 60px;
+  font-size: 2.8rem;
   font-weight: 600;
   line-height: 1;
   letter-spacing: -0.02em;
