--- a/app/theme.less
+++ b/app/theme.less
@@ -1,5 +1,5 @@
 body > section{
-  max-width: 40vw;
+  max-width: calc(max(40vw, 512px));
   margin: auto;
 }
 
@@ -83,3 +83,22 @@ ol li{
   }
 }
 
+
+
+.invite{
+  fieldset{
+    display: flex;
+    flex-wrap: wrap;
+    border: none;
+
+    label{
+      display: block;
+      width: 33%;
+      padding-bottom: 1rem;
+    }
+  }
+
+  button + button{
+    margin-left: 0.4rem;
+  }
+}
