Change logo / text

--- a/app/theme.less
+++ b/app/theme.less
@@ -19,7 +19,7 @@ header{
     border-radius: 1rem;
     box-shadow: 0.2rem 0.2rem 2rem rgba(0,0,0,0.3);
     padding: 8px;
-    background: #dadce3;
+    background: #fafcf3;
   }
 }
 
