--- a/public/theme.css
+++ b/public/theme.css
@@ -17,7 +17,7 @@ header img {
   border-radius: 1rem;
   box-shadow: 0.2rem 0.2rem 2rem rgba(0, 0, 0, 0.3);
   padding: 8px;
-  background: #dadce3;
+  background: #fafcf3;
 }
 @media (pointer: none), (pointer: coarse) {
   body {
